started with the styles

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <li><a href="#">Team</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
+        <div class="toggle"></div>
     </header>
+
 </body>
 </html>
