--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header id="header">
         <a href="#" class="logo">LOGO</a>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="#home" class="active">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Service</a></li>
             <li><a href="#">Portfolio</a></li>
@@ -20,6 +20,14 @@
         </ul>
         <div class="toggle"></div>
     </header>
+    <section id="home">
+        <div>
+            <h2>Responsive Website Design</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident explicabo nostrum eius ullam illum hic? Necessitatibus culpa distinctio similique vitae dolores perspiciatis tempore atque laborum corporis. Id minus deserunt voluptatem.</p>
+            <a href="#">Read more</a>
+        </div>
+        <img src="forest.jpg" alt="forest">
+    </section>
 
 </body>
 </html>
