--- a/index.html
+++ b/index.html
@@ -12,17 +12,57 @@
         <a href="#" class="logo">LOGO</a>
         <ul>
             <li><a href="#home" class="active">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Service</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Team</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Service</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#team">Team</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="toggle"></div>
     </header>
     <section id="home">
         <div>
             <h2>Responsive Website Design</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident explicabo nostrum eius ullam illum hic? Necessitatibus culpa distinctio similique vitae dolores perspiciatis tempore atque laborum corporis. Id minus deserunt voluptatem.</p>
+            <a href="#">Read more</a>
+        </div>
+        <img src="forest.jpg" alt="forest">
+    </section>
+    <section id="about">
+        <div>
+            <h2>About Us</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident explicabo nostrum eius ullam illum hic? Necessitatibus culpa distinctio similique vitae dolores perspiciatis tempore atque laborum corporis. Id minus deserunt voluptatem.</p>
+            <a href="#">Read more</a>
+        </div>
+        <img src="forest.jpg" alt="forest">
+    </section>
+    <section id="services">
+        <div>
+            <h2>Our Services</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident explicabo nostrum eius ullam illum hic? Necessitatibus culpa distinctio similique vitae dolores perspiciatis tempore atque laborum corporis. Id minus deserunt voluptatem.</p>
+            <a href="#">Read more</a>
+        </div>
+        <img src="forest.jpg" alt="forest">
+    </section>
+    <section id="portfolio">
+        <div>
+            <h2>Our Recent Work</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident explicabo nostrum eius ullam illum hic? Necessitatibus culpa distinctio similique vitae dolores perspiciatis tempore atque laborum corporis. Id minus deserunt voluptatem.</p>
+            <a href="#">Read more</a>
+        </div>
+        <img src="forest.jpg" alt="forest">
+    </section>
+    <section id="team">
+        <div>
+            <h2>Our Expert</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident explicabo nostrum eius ullam illum hic? Necessitatibus culpa distinctio similique vitae dolores perspiciatis tempore atque laborum corporis. Id minus deserunt voluptatem.</p>
+            <a href="#">Read more</a>
+        </div>
+        <img src="forest.jpg" alt="forest">
+    </section>
+    <section id="contact">
+        <div>
+            <h2>Contact Us</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident explicabo nostrum eius ullam illum hic? Necessitatibus culpa distinctio similique vitae dolores perspiciatis tempore atque laborum corporis. Id minus deserunt voluptatem.</p>
             <a href="#">Read more</a>
         </div>
