--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <a href="#" class="logo">LOGO</a>
         <ul>
             <li><a href="#home" class="active">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Service</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#team">Team</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about" >About</a></li>
+            <li><a href="#services" >Service</a></li>
+            <li><a href="#portfolio" >Portfolio</a></li>
+            <li><a href="#team" >Team</a></li>
+            <li><a href="#contact" >Contact</a></li>
         </ul>
-        <div class="toggle"></div>
+        <div class="toggle" ></div>
     </header>
     <section id="home">
         <div>
@@ -60,9 +60,8 @@
         <div>
             <h2>Contact Us</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident explicabo nostrum eius ullam illum hic? Necessitatibus culpa distinctio similique vitae dolores perspiciatis tempore atque laborum corporis. Id minus deserunt voluptatem.</p>
-        </div>
-        
+        </div>        
     </section>
-
+    <script src="script.js"></script>
 </body>
 </html>
